[package]
name = "age-keygen-deterministic"
version = "0.5.0"
description = "A simple Rust CLI tool to derive an age private key from a passphrase."
authors = [
  "Klaus Eisentraut",
  "Garret Stand <gstand@gstand.me>"
]
edition = "2021"

[dependencies]
rust-argon2 = "3.0.0"
bech32 = "0.11.0"
sha2 = "0.10.9"
hmac = "0.12.1"
zeroize = { version = "1.8.1", features = ["derive"] }
secure-string = "0.3.0"
clap = { version = "4.5.41", features = ["derive"] }
rpassword = "7.4.0"
